--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,10 @@
 Changelog
 =========
 
-1.0 (unreleased)
+1.0 (2012-10-15)
 ----------------
 
- - refactored during PloneConf2012 sprint [amleczko]
+ - refactored and release during PloneConf2012 sprint [amleczko]
 
 0.1dev (unreleased)
 -------------------
