--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,10 @@
 Changelog
 =========
 
-1.1 (unreleased)
+1.1.dev (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Docs update
 
 
 1.0 (2012-10-15)
